--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-# Core dependencies for Flask app
-Flask==2.2.5
-pandas==1.5.3
-scikit-learn==1.2.2
-numpy==1.24.3
+# Exact versions compatible with the trained model
+Flask==2.0.3
+pandas==1.3.5
+scikit-learn==0.22.1
+numpy==1.19.5
 gunicorn==20.1.0
-Werkzeug==2.2.3
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-itsdangerous==2.1.2
-click==8.1.7
+Werkzeug==2.0.3
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+itsdangerous==2.0.1
+click==8.0.4
+joblib==1.0.1
+scipy==1.7.3
+threadpoolctl==2.2.0
