--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,5 @@
 services:
   - type: web
     name: road-accident-prediction
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    env: docker
     plan: free
