--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-# Exact versions compatible with the trained model
-Flask==2.0.3
-pandas==1.3.5
-scikit-learn==0.22.1
-numpy==1.19.5
+# Modern compatible versions for Python 3.11+
+Flask==2.3.2
+pandas==2.0.2
+scikit-learn==1.3.0
+numpy==1.24.3
 gunicorn==20.1.0
-Werkzeug==2.0.3
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-itsdangerous==2.0.1
-click==8.0.4
-joblib==1.0.1
-scipy==1.7.3
-threadpoolctl==2.2.0
+Werkzeug==2.3.6
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+itsdangerous==2.1.2
+click==8.1.3
+joblib==1.3.1
+scipy==1.10.1
+setuptools==68.0.0
+wheel==0.40.0
